--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,3 +15,12 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.gift-index-item {
+  width: 25%;
+  height: 150px;
+  border: 1px solid red;
+  display: inline-block;
+  margin: 10px;
+  padding: 20px;
+}
